<resources>
    <string name="app_name">Crazy 3</string>
    <string name="start">Start</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="send_to">Share through...</string>
    <string name="pro">Pro</string>
    <string name="kids">Kids</string>
    <!--<string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>-->
    <string name="banner_ad_unit_id">ca-app-pub-8736062206087440/5558954508</string>
    <string name="help_text">Tap the screen, when it\'s a multiple of 3 to score.\nIf you miss the multiple or tap on wrong number, you would lose a point and a life!</string>
    <string name="app_id">261335643059</string>
    <string name="global_leaderboard">CgkIs-fFxs0HEAIQAQ</string>
    <string name="achievement_baby_steps">CgkIs-fFxs0HEAIQDg</string>
    <string name="achievement_a_good_friend">CgkIs-fFxs0HEAIQDw</string>
    <string name="achievement_winners_never_quit">CgkIs-fFxs0HEAIQEA</string>
    <string name="achievement_score_3">CgkIs-fFxs0HEAIQEQ</string>
    <string name="achievement_score_39">CgkIs-fFxs0HEAIQEg</string>
    <string name="achievement_score_99">CgkIs-fFxs0HEAIQEw</string>
    <string name="achievements">Achievements</string>
    <string name="show_off">Challenge\nyour friends: </string>
    <string name="leaderboard">Leaderboard</string>
    <string name="app_id_fb">1091165717568973</string>
    <string name="tap_on_heart">Tap on heart to buy more lives.</string>
    <!--<string name="app_id_fb">1096911363661075</string>-->

</resources>
