<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#6A3718"
    android:gravity="center"
    android:contextClickable="false">

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="1" >
    </View>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Help"
        android:id="@+id/button_help"
        android:layout_centerHorizontal="true"
        android:background="@color/main_button"
        android:layout_margin="@dimen/abc_action_bar_subtitle_top_margin_material"
        android:padding="@dimen/abc_button_padding_vertical_material"
        android:textColor="@color/button_text"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="0.1" >
    </View>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Play"
        android:id="@+id/button_play"
        android:layout_below="@+id/button_help"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/abc_action_bar_subtitle_top_margin_material"
        android:background="@color/main_button"
        android:padding="@dimen/abc_button_padding_vertical_material"
        android:textColor="@color/button_text"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="0.1" >
    </View>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Settings"
        android:id="@+id/button_settings"
        android:background="@color/main_button"
        android:padding="@dimen/abc_button_padding_vertical_material"
        android:layout_below="@+id/button_play"
        android:layout_centerHorizontal="true"
        android:textColor="@color/button_text"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="0.1" >
    </View>

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:id="@+id/radio_grp_game_mode">
        <RadioButton android:id="@+id/radio_kids"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kids"
            android:textColor="#ffffff"
            android:checked="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />

        <RadioButton android:id="@+id/radio_pro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pro"
            android:textColor="#ffffff"
            android:checked="false"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />
    </RadioGroup>

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="1" >
    </View>

    <com.google.android.gms.ads.AdView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/adView"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">

    </com.google.android.gms.ads.AdView>

</LinearLayout>
