<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:gravity="center"
    android:id="@+id/linear_layout_game_activity"
    android:padding="@dimen/abc_action_bar_icon_vertical_padding_material">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:gravity="center_vertical"
        android:background="@drawable/line"
        android:id="@+id/lives_button">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="0"
            android:id="@+id/tv_score"
            android:layout_weight="1"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:foregroundGravity="center"
            android:gravity="start"
            android:singleLine="true"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="| 0"
            android:id="@+id/tv_hi_score"
            android:layout_weight="1"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:foregroundGravity="center"
            android:gravity="end"
            android:singleLine="true"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"/>

        <Button
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="3"
            android:id="@+id/button_lives"
            android:textColor="@color/background_color"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/little_heart"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/button_share"
            android:background="@drawable/share"
            android:height="48dp"
            android:width="48dp"
            android:layout_margin="5dp"
            android:padding="5dp"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/button_help"
            android:background="@drawable/how_to"
            android:height="48dp"
            android:width="48dp"
            android:layout_margin="5dp"
            android:padding="5dp"/>

    </LinearLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="0.1" >
    </View>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:gravity="center"
        android:id="@+id/layout_share"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_off"
            android:textColor="#ffffff"
            android:background="@android:color/transparent"
            android:textSize="24sp"
            android:id="@+id/text_view_show_off"/>

        <Button
            android:id="@+id/button_tweet"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:onClick="onClickTwitt"
            android:background="@drawable/twitter" />

        <Button
            android:id="@+id/button_fb"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/facebook" />

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/start"
        android:id="@+id/button_tap"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:textColor="#ffffff"
        android:textSize="96sp"
        android:textStyle="bold"
        android:background="@android:color/transparent"
        android:paddingBottom="@dimen/abc_button_padding_horizontal_material" />

    <View
        android:layout_width="20dp"
        android:layout_height="1dp" >
    </View>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_weight="0.1"
        android:id="@+id/layout_games"
        android:visibility="gone">

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/button_achievements"
            android:layout_width="36dp"
            android:layout_height="42dp"
            android:layout_margin="5dp"
            android:background="@drawable/ic_achievement"
            android:padding="5dp" />

        <Button
            android:id="@+id/button_leaderboard"
            android:layout_width="42dp"
            android:layout_height="36dp"
            android:background="@drawable/leaderboard"
            android:padding="5dp"
            android:layout_margin="5dp" />

    </LinearLayout>

    <!-- sign-out button -->

    <com.google.android.gms.ads.AdView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/adView"
        ads:adUnitId="@string/banner_ad_unit_id"
        ads:adSize="BANNER">

    </com.google.android.gms.ads.AdView>

</LinearLayout>